2008-09-12  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-keysets.c: Fix problem with 'no keys 
	available' when trying to sign a PGP key. Fixes bug #545626
	
2008-09-10  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkeyring-source.c:
	* libcryptui/cryptui.h:
	* libseahorse/libseahorse-c.vapi:
	* libseahorse/seahorse-key.h:
	* pgp/seahorse-pgp-key.c:
	* pkcs11/p11.vapi:
	* pkcs11/seahorse-pkcs11-certificate.vala:
	* pkcs11/seahorse-pkcs11-source.vala:
	* src/seahorse-viewer.c:
	* ssh/seahorse-ssh-key.c: Add 'exportable' flag to objects/keys
	and don't enable export UI if selected objects are not exportable.
	Fixes bug #551477
	
2008-09-09  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-transfer-operation.c: Fix crash/warning 
	when syncing with an ldap server that doesn't have our key.
	   
2008-09-08  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui-key-combo.c: Ellipsize too long UIDs
    Fixes bug #550281
    
    * pixmaps/scalable/Makefile.am: Remove remaining reference to 
    seahorse-applet.svg. Fixes bug #551379

    * pixmaps/22x22/seahorse-applet-key.svg (deleted):
    * pixmaps/22x22/seahorse-applet-encrypted.svg (deleted):
    * pixmaps/22x22/seahorse-applet-unknown.svg (deleted):
    * pixmaps/22x22/seahorse-applet-text.png (deleted):
    * pixmaps/22x22/seahorse-applet-text.svg (deleted):
    * pixmaps/22x22/seahorse-applet-signed.png (deleted):
    * pixmaps/22x22/seahorse-applet-signed.svg (deleted):
    * pixmaps/22x22/seahorse-applet-key.png (deleted):
    * pixmaps/22x22/Makefile.am:
    * pixmaps/22x22/seahorse-applet-encrypted.png (deleted):
    * pixmaps/22x22/seahorse-applet-unknown.png (deleted):
    * pixmaps/48x48/seahorse-applet.png (deleted):
    * pixmaps/48x48/seahorse-applet-signed.png (deleted):
    * pixmaps/48x48/seahorse-applet-text.png (deleted):
    * pixmaps/48x48/seahorse-applet-key.png (deleted):
    * pixmaps/48x48/Makefile.am: