@@ -1,3 +1,9 @@
+2008-09-13  Stef Walter  <stef@memberwebs.com>
+
+	* libcryptui/cryptui-key-list.c: Fix column widths, and 
+	elipsize long text in key listing. Fixes bug #551426
+	Patch by Adam Schreiber.
+	
 2008-09-12  Stef Walter  <stef@memberwebs.com>
 
 	* pgp/seahorse-pgp-keysets.c: Fix problem with 'no keys 
